--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<html><body><h1>Jumper Man App</h1><p>Test Invoice Tool</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jumper Man App</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Jumper Man App</h1>
+        <p>Welcome to your Bounce House business management tool!</p>
+        <button onclick="createInvoice()">Create Invoice</button>
+        <button onclick="createContract()">Create Contract</button>
+        <button onclick="createWaiver()">Create Waiver</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
