--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="black-background">
     <div class="container">
         <header>
-            <img src="jumperman-logo.png" alt="The Jumper Man Logo" class="logo">
+            <img src="the-jumper-man-logo-with-grey.gif" alt="The Jumper Man Logo" class="logo">
             <h1>The Jumper Man App</h1>
             <p>Welcome to your Bounce House business management tool!</p>
         </header>
